# FareDrop

./: .gitignore  README.md
.github/workflows/: publish.yml
flight-monitor/: pyproject.toml
flight-monitor/config/: routes.example.yaml
flight-monitor/manual/: hopegoo_smoke.py  trip_smoke.py
flight-monitor/src/flight_monitor/: anomaly.py  browser.py  cli.py  config.py  matrix.py  models.py  report.py  runner.py  store.py
flight-monitor/src/flight_monitor/providers/: __init__.py  base.py  hopegoo.py  registry.py  trip.py
flight-monitor/tests/: test_anomaly.py  test_browser.py  test_config.py  test_hopegoo_provider.py  test_import.py  test_matrix.py  test_provider_base.py  test_report.py  test_runner.py  test_store.py  test_trip_provider.py
js/: package-lock.json  package.json
