[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-monitor"
version = "0.1.0"
description = "Local low-fare monitor for China-focused flight platforms."
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
]

[project.scripts]
flight-monitor = "flight_monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_monitor"]
